--- a/css/funkowb.css
+++ b/css/funkowb.css
@@ -68,6 +68,37 @@ button {
   margin-top: 3rem;
 
 }
+@media only screen and (min-width: 600px){
+  .caja-pa{
+    margin-left: 18rem;
+    margin-top: 4rem;
+}
+
+.titulo{
+      font-size: 8rem;
+}
+
+button {
+    width: 25rem;
+    margin-top: 5rem;
+    margin-left: 10rem;
+    font-size: 2.25rem;
+    border-radius: 4rem;
+    background: var(--color1); 
+    font-family: 'Roboto Slab', serif;  
+    box-shadow: 0 0 10px #ece5e5, inset 0 0 10px #c5aaaa;
+  }
+  .animado{
+    margin-left: 8rem;
+  }
+  .animado img{
+    height: 28rem;
+    width: 25rem;
+  }
+  
+
+}
+
 @media only screen and (min-width: 1366px) {
   .caja-pa{
     margin-top: 4rem;
