--- a/css/funkowb.css
+++ b/css/funkowb.css
@@ -2,7 +2,6 @@
     width: auto;
     height: auto;
     margin-top: 8rem;
-    align-items: center;
 }
 /*-----------------------------------------------------*/
 .titulo{
@@ -68,6 +67,7 @@ button {
   margin-top: 3rem;
 
 }
+
 @media only screen and (min-width: 600px){
   .caja-pa{
     margin-left: 18rem;
@@ -98,11 +98,40 @@ button {
   
 
 }
+@media only screen and (min-width: 1000px){
+  .caja-pa{
+    margin-left: 28.5rem;
+    margin-top: 4rem;
+}
 
+.titulo{
+      font-size: 8rem;
+}
+
+button {
+    width: 25rem;
+    margin-top: 5rem;
+    margin-left: 10rem;
+    font-size: 2.25rem;
+    border-radius: 4rem;
+    background: var(--color1); 
+    font-family: 'Roboto Slab', serif;  
+    box-shadow: 0 0 10px #ece5e5, inset 0 0 10px #c5aaaa;
+  }
+  .animado{
+    margin-left: 8rem;
+  }
+  .animado img{
+    height: 28rem;
+    width: 25rem;
+  }
+  
+
+}
 @media only screen and (min-width: 1366px) {
   .caja-pa{
     margin-top: 4rem;
-    margin-left: 35rem;
+    margin-left: 40rem;
   }
 /*-----------------------------------------------------*/
   .titulo{
