--- a/css/css-boton.css
+++ b/css/css-boton.css
@@ -16,6 +16,8 @@ button {
   a{
     text-decoration: none;
     color: greenyellow;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 15px;
   }
   button:hover {
     animation: a 0.5s 1 linear;
@@ -43,8 +45,13 @@ button {
     }
   }
 
-  @media only screen and (max-width: 375px){
+  @media only screen and (max-width: 1280px){
     button {
-     margin-top: 4rem;
+      margin-top: 2rem;
     }
-}
+  }
+  @media only screen and (max-width: 450px){
+    button {
+      margin-top: 2rem;
+    }
+  }
