--- a/css/principio.css
+++ b/css/principio.css
@@ -4,8 +4,6 @@
     margin: 0 auto;
     padding: 10px;
     margin-top: 2rem;
-    background-color: aquamarine;
-
   
 }
 .inicio h1{
@@ -21,8 +19,6 @@
     padding: 10px;
     box-sizing: border-box;
     height: auto;
-
-    background-color: rebeccapurple;
 }
 img{
     width: 30%;
@@ -39,17 +35,23 @@ box-sizing: border-box;
 */
 /***********************************************************/
 @media only screen and (max-width: 1280px){
-  
+    .inicio h1{
+        font-size: 8rem;
+        margin-top: 4rem;
+    }
+  img{
+    margin-top: 4rem;
+  }
 }
 
-@media only screen and (max-width: 450px){
+@media only screen and (max-width: 500px){
      .inicio h1{
-        margin-top: 5rem;
+        margin-top: 6rem;
         font-size: 3rem;
     }
 
     img{
         margin-top: 4rem;
-        width: 20rem;
+        width: 25rem;
     }
 }
