--- a/css/home/buscador.css
+++ b/css/home/buscador.css
@@ -9,7 +9,6 @@
     box-sizing: border-box;
     background-color: #ccc;
     margin-top: 2rem;
-    margin-left: 2rem;
     box-shadow: inset 2px 5px 10px rgba(0,0,0,0.3);
     transition: 300ms ease-in-out;
   }
@@ -20,3 +19,9 @@
     box-shadow: 13px 13px 100px #969696,
                -13px -13px 100px #ffffff;
   }
+
+@media only screen and (max-width: 500px){
+    .input{
+        display: none;
+    }
+}
