--- a/css/footer.css
+++ b/css/footer.css
@@ -4,7 +4,7 @@
     height: 5rem;
 }
 .fin{
-    background-color: rgb(245, 155, 21);
+    background-color: red;
     width: 100%;
     height: 20%;
     padding: 10px;
