--- a/css/home/menu.css
+++ b/css/home/menu.css
@@ -1,8 +1,8 @@
 #menu {
 	color: #FFF;
 	height: 45px;
-    width: 18%;
-	padding-left: 2px;
+    width: 15%;
+	padding-left: 1px;
 	margin-top: 1.5rem;
 }
 #menu ul, #menu li {
@@ -16,19 +16,18 @@
 
 	float: left;
 	display: inline;
-	position: relative;
 }
 #menu a {
 	display: block;
 	line-height: 45px;
-	padding: 0 14px;
+	padding: 0 11px;
 	text-decoration: none;
 	color: #FFFFFF;
-	font-size: 16px;
+	font-size: 15px;
 }
 #menu a.dropdown-arrow:after {
 	content: "\25BE";
-	margin-left: 5px;
+	margin-left: 2px;
 }
 #menu li a:hover {
 	color: #0099CC;
@@ -47,7 +46,6 @@
 	display: none;
 	line-height: 45px;
 	text-align: center;
-	position: absolute;
 	left: 35px
 }
 #menu label:before {
@@ -80,6 +78,18 @@
 	color: #444444;
 }
 @media screen and (max-width: 800px){
+	#menu {position:relative}
+	#menu ul {background:#111;position:absolute;top:100%;right:0;left:0;z-index:3;height:auto;display:none}
+	#menu ul.sub-menus {width:100%;position:static;}
+	#menu ul.sub-menus a {padding-left:30px;}
+	#menu li {display:block;float:none;width:auto;}
+	#menu input, #menu label {position:absolute;top:0;left:0;display:block}
+	#menu input {z-index:4}
+	#menu input:checked + label {color:white}
+	#menu input:checked + label:before {content:"\00d7"}
+	#menu input:checked ~ ul {display:block}
+}
+@media only screen and (max-width: 1280px){
 	#menu {position:relative}
 	#menu ul {background:#111;position:absolute;top:100%;right:0;left:0;z-index:3;height:auto;display:none}
 	#menu ul.sub-menus {width:100%;position:static;}
