--- a/css/principal/principio.css
+++ b/css/principal/principio.css
@@ -12,6 +12,7 @@
     padding: 20px;
     box-sizing: border-box;
     text-align: center;
+    margin-top: 4rem;
     font-family: 'Press Start 2P', cursive;
 }
 .inicio{
@@ -44,7 +45,7 @@ box-sizing: border-box;
   }
 }
 
-@media only screen and (max-width: 500px){
+@media only screen and (max-width: 800px){
      .inicio h1{
         margin-top: 6rem;
         font-size: 3rem;
